codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__agents_navigation_status.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                "
" ┃ Ask Codex to do anything                                                     "
" ┃                                                                              "
" ┃                                                                              "
" ┃                                                                              "
" ┃                                                                              "
" ┃                                                                              "
"                                                                                "
"  model · project · ← for agents                                                "
